# NN-Architecture-Tutorial

./: .gitignore  README.md  notes.txt  pyproject.toml  run_dps_macos.py  run_ocr.py  test_run_ocr.py
notebooks/: deepseek_ocr.ipynb
