[project]
name = "deepsek-ocr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.11.0",
    "addict>=2.4.0",
    "easydict>=1.13",
    "einops>=0.8.1",
    "matplotlib>=3.10.7",
    "tokenizers>=0.20.3",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "transformers==4.46.3",
    "wheel>=0.45.1",
]

